# gym-sapientino

./: .gitignore  404.html  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  setup.py  sitemap.xml  todo  tox.ini
.github/: RELEASE_PR.md
.github/workflows/: lint.yml  test.yml
authors/: index.html
contributing/: index.html
docs/: configure_map.ipynb  quickstart.ipynb
gym_sapientino/: __init__.py  __main__.py  __version__.py  play.py  sapientino_env.py  utils.py
gym_sapientino/assets/: __init__.py  default_map.txt  map1.txt
gym_sapientino/core/: __init__.py  actions.py  configurations.py  constants.py  grid.py  objects.py  states.py  types.py
gym_sapientino/rendering/: __init__.py  base.py  pygame.py
gym_sapientino/wrappers/: __init__.py  dict_space.py  gym.py  observations.py
history/: index.html
quickstart/: index.html
scripts/: check_copyright.py  whitelist.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_gym_sapientino.py
tests/src/: test_observations.py
