[tool.poetry]
name = "gym_sapientino"
version = "0.4.0"
description = "Gym Sapientino environment using Pygame."
authors = [
	"Marco Favorito <favorito@diag.uniroma1.it>",
	"Luca Iocchi <iocchi@diag.uniroma1.it>",
	"Roberto Cipollone <cipollone@diag.uniroma1.it>",
]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://whitemech.github.io/gym-sapientino"
repository = "https://github.com/whitemech/gym-sapientino.git"
documentation = "https://whitemech.github.io/gym-sapientino"
keywords = [
    "grid-world",
		"continuous state",
    "reinforcement learning",
    "gymnasium",
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
#packages = []
include = []

#[tool.poetry.scripts]
#script_name = 'path/to/script'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/whitemech/gym-sapientino/issues"
"Pull Requests" = "https://github.com/whitemech/gym-sapientino/pulls"

[tool.poetry.dependencies]
python = "^3.9"
gymnasium = ">=0.26.1,<0.30"
numpy = "^1.21.0"
pygame = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
tox = "^4.9.0"
codecov = "^2.1.13"
isort = "^5.12.0"
bandit = "^1.7.5"
mypy = "^1.7.0"
safety = "^2.3.1"
ipython = "^8.17.2"
notebook = "^7.0.6"
flake8 = "^6.1.0"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
